<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="48dp"
    tools:context=".ui.navigationbar.orders.AddOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/order_title_book"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/order_preview_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/order_format_date_text"
            android:inputType="datetime"
            android:layout_marginTop="50dp" />


        <Button
            android:id="@+id/saveChangesButtonBook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/order_buttom_book"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</ScrollView>

