<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.hse.guidehelper.ui.bottomNavBar.excursion.ExcursionFragment"
        android:label="@string/title_excursion"
        tools:layout="@layout/activity_excursionslist" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.hse.guidehelper.ui.bottomNavBar.orders.MyOrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.hse.guidehelper.ui.bottomNavBar.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.hse.guidehelper.ui.bottomNavBar.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/dialogFragment2"
        android:name="ru.hse.guidehelper.chat.DialogFragment"
        android:label="DialogFragment" />
    <fragment
        android:id="@+id/messagesFragment2"
        android:name="ru.hse.guidehelper.chat.MessagesFragment"
        android:label="fragment_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/guideInfoFragment"
        android:name="ru.hse.guidehelper.auth.GuideInfoFragment"
        android:label="fragment_guide_info"
        tools:layout="@layout/fragment_guide_info" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="ru.hse.guidehelper.auth.SignInFragment"
        android:label="SignInFragment" />
    <activity
        android:id="@+id/excursionsListDetailActivity"
        android:name="ru.hse.guidehelper.excursions.ExcursionsListDetailActivity"
        android:label="activity_excursionslist_detail"
        tools:layout="@layout/activity_excursionslist_detail" />
</navigation>